Tooltip for 05-lection3/01-tooltip z-index fix

--- a/05-lection3/01-tooltip/tooltip.css
+++ b/05-lection3/01-tooltip/tooltip.css
@@ -14,6 +14,7 @@
 .tooltip__content {
     visibility: hidden;
     position: absolute;
+    z-index: 1;
     top: 0;
 
     width: 129px;
